@@ -1,5 +1,7 @@
 package com.listagemUsuario.aulaBack.application.services;
 
+import com.listagemUsuario.aulaBack.application.objetct.alterarDados.AlterarEmailRequest;
+import com.listagemUsuario.aulaBack.application.objetct.alterarDados.AlterarSenhaRequest;
 import com.listagemUsuario.aulaBack.application.objetct.usuario.UsuarioRequest;
 import com.listagemUsuario.aulaBack.application.objetct.usuario.UsuarioResponse;
 import com.listagemUsuario.aulaBack.domain.entities.Usuario;
@@ -7,10 +9,13 @@ import com.listagemUsuario.aulaBack.domain.repository.UsuarioRepository;
 import com.listagemUsuario.aulaBack.domain.valueObjetcs.Email;
 import com.listagemUsuario.aulaBack.domain.valueObjetcs.Telefone;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class UsuarioService {
@@ -20,10 +25,8 @@ public class UsuarioService {
 
     public UsuarioResponse usuarioLogado() {
         var auth = SecurityContextHolder.getContext().getAuthentication();
-
         var usuarioLogado = usuarioRepository.findByEmail(auth.getName())
-                .orElseThrow(() -> new RuntimeException("Erro ao encontrar o usuário"));
-
+                .orElseThrow(() -> new RuntimeException("Erro ao encontrar o usuário logado."));
         return toResponse(usuarioLogado);
     }
 
@@ -34,6 +37,9 @@ public class UsuarioService {
     }
 
     public Usuario salvar(UsuarioRequest entrada) {
+        if (usuarioRepository.findByEmail(entrada.email()).isPresent()) {
+            throw new RuntimeException("Este e-mail já está em uso.");
+        }
         var usuario = new Usuario(entrada);
         usuario.setSenha(entrada.senha());
         return usuarioRepository.save(usuario);
@@ -43,45 +49,45 @@ public class UsuarioService {
         var usuarios = usuarioRepository.findAll();
         return usuarios.stream()
                 .map(this::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public UsuarioResponse usuarioEditado(Long id, UsuarioRequest entrada) {
-        var usuarioEncontrado = usuarioRepository.findById(id);
+        var usuarioEncontrado = usuarioRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Erro: Usuário com ID " + id + " não encontrado para atualização."));
 
-        if (usuarioEncontrado.isPresent()) {
-            var usuario = usuarioEncontrado.get();
-            usuario.setNome(entrada.nome());
-            usuario.setSobrenome(entrada.sobrenome());
-            usuario.setTelefone(new Telefone(entrada.telefone()));
-            usuario.setCep(entrada.cep());
-            usuario.setLocalidade(entrada.localidade());
-            usuario.setUf(entrada.uf());
+        var usuario = usuarioEncontrado;
+        usuario.setNome(entrada.nome());
+        usuario.setSobrenome(entrada.sobrenome());
+        usuario.setTelefone(new Telefone(entrada.telefone()));
+        usuario.setCep(entrada.cep());
+        usuario.setLocalidade(entrada.localidade());
+        usuario.setUf(entrada.uf());
 
-            if (entrada.email() != null && !entrada.email().isEmpty()) {
-                usuario.setEmail(new Email(entrada.email()));
-            }
-
-            if (entrada.senha() != null && !entrada.senha().isEmpty()) {
-                usuario.setSenha(entrada.senha());
-            }
-
-            usuarioRepository.save(usuario);
-            return toResponse(usuario);
+        if (entrada.email() != null && !entrada.email().isEmpty()) {
+            usuario.setEmail(new Email(entrada.email()));
         }
 
-        throw new RuntimeException("Erro: Usuário com ID " + id + " não encontrado para atualização.");
+        if (entrada.senha() != null && !entrada.senha().isEmpty()) {
+            usuario.setSenha(entrada.senha());
+        }
+
+        usuarioRepository.save(usuario);
+        return toResponse(usuario);
     }
 
-    public Long deletar(Long id) {
-        var usuario = usuarioRepository.findById(id);
-
-        if (usuario.isPresent()) {
-            usuarioRepository.deleteById(id);
-            return id;
+    public void deletar(Long id) {
+        if (!usuarioRepository.existsById(id)) {
+            throw new RuntimeException("Erro ao deletar: Usuário com ID " + id + " não encontrado.");
         }
+        usuarioRepository.deleteById(id);
+    }
 
-        throw new RuntimeException("Erro ao encontrar o usuário");
+    public List<UsuarioResponse> listarPorPerfil(String perfil) {
+        var usuarios = usuarioRepository.findByPerfil(perfil);
+        return usuarios.stream()
+                .map(this::toResponse)
+                .collect(Collectors.toList());
     }
 
     private UsuarioResponse toResponse(Usuario usuario) {
@@ -99,10 +105,33 @@ public class UsuarioService {
         );
     }
 
-    public List<UsuarioResponse> listarPorPerfil(String perfil) {
-        var usuarios = usuarioRepository.findByPerfil(perfil);
-        return usuarios.stream()
-                .map(this::toResponse)
-                .toList();
+    public void alterarEmail(String emailUsuarioLogado, AlterarEmailRequest request) {
+        Usuario usuario = usuarioRepository.findByEmail(emailUsuarioLogado)
+                .orElseThrow(() -> new UsernameNotFoundException("Usuário não encontrado."));
+
+        if (!usuario.getSenha().equals(request.senhaAtual())) {
+            throw new BadCredentialsException("Senha atual incorreta.");
+        }
+
+        if (usuarioRepository.findByEmail(request.novoEmail()).isPresent()) {
+            throw new IllegalStateException("O novo e-mail já está em uso.");
+        }
+
+        usuario.setEmail(new Email(request.novoEmail()));
+        usuario.setUsuario(request.novoEmail());
+        usuarioRepository.save(usuario);
     }
+
+    public void alterarSenha(String emailUsuarioLogado, AlterarSenhaRequest request) {
+        Usuario usuario = usuarioRepository.findByEmail(emailUsuarioLogado)
+                .orElseThrow(() -> new UsernameNotFoundException("Usuário não encontrado."));
+
+        if (!usuario.getSenha().equals(request.senhaAtual())) {
+            throw new BadCredentialsException("Senha atual incorreta.");
+        }
+
+        usuario.setSenha(request.novaSenha());
+        usuarioRepository.save(usuario);
+    }
+
 }
